--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
         <p>使用方法：<code>https://cdn.zhangsoft.link/static/包名（小写）/版本号/文件名</code>。</p>
         <p>如果文件名以 <code>.min.*</code> 结尾，则说明是压缩过的，反之则是原文件。</p>
         <p>具体的路径可以参考<a href="https://github.com/MrZhang365/ZhangCDN">我们的仓库</a></p>
+        <p>您也可以点击<a href="https://cdn.zhangsoft.link/packages.txt">此处</a>来查看我们收录的包的列表。</p>
     </body>
 </html>
